portfolio-v2/src/Components/Card/index.scss
.card{
    background-color: rgb(16, 16, 16);
    height: 200px;
    width: 90%;
    display: flex;
    flex-direction: column;
    // justify-content: flex-start;
    align-items: space-around;
    position: relative;
    padding: 32px;
    border: 1px solid rgba(255, 255, 255, 0.153);
    border-radius: 20px;
    transition: all 0.2s ease  ;
    &:hover{
        .items{
            opacity: 0.8;
        }
        .card-items{
            margin-top: 16px;
        }
        box-shadow: 0 0px 30px 3px rgba(4, 129, 201, 0.341);
        scale: 1.02 ;
        background-image: linear-gradient(155deg,rgba(2, 0, 36, 0.09) 0%, rgba(9, 9, 121, 0.09) 20%, rgba(4, 129, 201, 0.214) 64%, rgba(60, 0, 255, 0.09) 100%);
        border: 1px solid rgba(138, 191, 255, 0.797);
        .icon-bg{
            background-color: rgba(4, 129, 201, 0.5);
            box-shadow: 0 0 12px 1px rgba(4, 129, 201, 0.3);
        }
        .title{
            color:rgba(4, 129, 201, 1)
        }
    }
        &.purple:hover{
            
            box-shadow: 0 0px 30px 3px rgba(4, 17, 201, 0.5);
        scale: 1.02 ;
        background-image: linear-gradient(155deg,rgba(2, 0, 36, 0.09) 0%, rgba(9, 9, 121, 0.09) 20%, rgba(4, 17, 201, 0.214) 64%, rgba(60, 0, 255, 0.09) 100%);
        border: 1px solid rgba(4, 17, 201, 0.8);
        .icon-bg{
        background-color: rgba(4, 17, 201, 0.5);
        box-shadow: 0 0 12px 1px rgba(4, 17, 201, 0.3);
        }
        .title{
        color:rgba(4, 129, 201, 1)
        }
        
        
    }
    &.yellow:hover{
        box-shadow: 0 0px 30px 3px rgba(212, 0, 255, 0.347);
            scale: 1.02 ;
            // z-index: 1;
            background-image: linear-gradient(155deg,rgba(26, 0, 36, 0.07) 0%, rgba(65, 3, 89, 0.09) 20%, rgba(182, 16, 223, 0.167) 64%, rgba(83, 2, 99, 0.09) 100%);
            border: 1px solid rgba(212, 0, 255, 0.7);
            .icon-bg{
                background-color: rgba(212, 0, 255, 0.4);
                box-shadow: 0 0 12px 1px rgba(212, 0, 255, 0.3);
            }
            .title{
                color:rgba(212, 0, 255, 0.7);
            }
        
    }
        &.pink:hover{
                box-shadow: 0 0px 30px 3px rgba(255, 0, 200, 0.347);
                scale: 1.02 ;
                background-image: linear-gradient(155deg,rgba(36, 0, 28, 0.07) 0%, rgba(99, 2, 73, 0.09) 20%, rgba(246, 70, 187, 0.199) 64%, rgba(93, 1, 59, 0.09) 100%);
                border: 1px solid rgba(255, 0, 195, 0.7);
                .icon-bg{
                    background-color: rgba(255, 0, 166, 0.4);
                    box-shadow: 0 0 12px 1px rgba(255, 0, 162, 0.3);
                }
                .title{
                    color:rgba(255, 0, 132, 0.7);
                }
    
    }
    &:after{
        content:attr(data-content);
        position: absolute;
        font-family: "lexend";
        font-weight: 900;
        font-size: 5vmax;
        letter-spacing: 3px;
        color: rgba(84, 84, 84, 0.144);
        top: 50%;
        left:50%;
        z-index: 0;
        transform: translate(-50%, -50%) scaleY(1.1);
           
    }
}

.title{
    z-index: 1;
    font-family: 'lexend';
    font-size: 30px;
    font-weight: 600;
    color: white;
    margin-top: 10px;
}
.icon-bg{
    background-color: rgba(255, 255, 255, 0.12);
    width: fit-content;
    backdrop-filter: blur(100px);
    border-radius:15px ;
}
.icon{
    width: 25px;
    height: 25px;
    padding: 10px 10px;
    // background-color: rgba(201, 201, 201, 0.12);
    
    
    color: white;
}
.card-items{
    margin: 0px;
    display: flex;
    flex-direction: row;
    gap:20px;
    list-style: none;
    padding: 0;
    justify-content: start;
    width: fit-content;
    transition: all 0.2s ease-in-out;
}
.items{
    background-color: rgb(255, 255, 255);
    font-family: "lexend";
    font-weight: 400;
    color: rgb(17, 17, 17);
    padding: 5px 15px;
    border-radius: 20px;
    z-index: 1;
    text-wrap: nowrap;
}
.project-description{
    display: flex;
    flex-direction: row;
    font-family: 'lexend';
    gap: 20px;
    font-size: 14px;
    font-weight: 200;
    color: rgba(255, 255, 255, 0.8);
    line-height: 1.5;
    width: 100%;
    justify-content: start;
    // margin-top: 12px;
}

i{
    font-size: 50px;
    z-index: 1;
    animation: breathing 7s both infinite;
    transition: all 0.3 ease-in-out;
}

img{
    width: 50px;
    animation: breathing 7s both infinite;
    z-index: 1;
}


@keyframes breathing {

    0%{
        scale: 1;
    }
    50%{
        scale:1.13;
    }
    100%{
        scale:1;
    }
    
}

